# openapi-pachca-client

./: openapi_pachka.yaml
pachca-api-open-api-3-0-client/: README.md  pyproject.toml
pachca-api-open-api-3-0-client/pachca_api_open_api_3_0_client/: __init__.py  client.py
pachca-api-open-api-3-0-client/pachca_api_open_api_3_0_client/api/chats_and_channels/: create_chat.py  (+2 more)
pachca-api-open-api-3-0-client/pachca_api_open_api_3_0_client/models/: __init__.py  bad_request.py  base_employee.py  base_employee_custom_properties_item.py  button.py  chat.py  create_chat_body.py  create_chat_response_201.py  create_chat_response_400.py  create_chat_response_404.py  create_chat_response_422.py  create_message.py  create_message_body.py  create_message_entity_type.py  create_message_files_item.py  create_message_files_item_file_type.py  create_message_response_201.py  create_thread_response_200.py  create_thread_response_200_data.py  delete_message_reactions_response_400.py  delete_message_reactions_response_400_errors_item.py  delete_message_reactions_response_400_errors_item_payload.py  delete_message_reactions_response_404.py  delete_message_reactions_response_404_errors_item.py  delete_message_reactions_response_404_errors_item_payload.py  direct_response.py  edit_messages.py  edit_messages_buttons_item_item.py  edit_messages_files.py  edit_messages_files_file_type.py  employee.py  error.py  error_payload.py  errors_code.py  errors_code_payload.py  file_response.py  get_chat_response_200.py  get_chat_response_404.py  get_chats_availability.py  get_chats_response_200.py  (+51 more)
(+27 files in other folders)
